# PhoneAppVertxV2

./: .gitignore  README.adoc  WORKSPACE  build.gradle  gradle.properties  settings.gradle
catalog/: BUILD.bazel  README.adoc  build.gradle.kts
catalog/src/main/java/com/mm/catalog/: App.java  CatalogVerticle.java  Config.java  IoC.java  Properties.java
catalog/src/main/java/com/mm/catalog/application/getcatalog/: CatalogService.java  GetCatalogService.java
catalog/src/main/java/com/mm/catalog/config/: PostgresConfig.java
catalog/src/main/java/com/mm/catalog/domain/model/: PhoneModel.java  PhonePriceModel.java
catalog/src/main/java/com/mm/catalog/domain/repository/: CatalogRepository.java
catalog/src/main/java/com/mm/catalog/handler/: CatalogHandler.java
catalog/src/main/java/com/mm/catalog/mapper/: PhoneMapper.java  PhoneResourceMapper.java
catalog/src/main/java/com/mm/catalog/model/: PhoneModel.java  PhonePriceModel.java
catalog/src/main/java/com/mm/catalog/repository/: CatalogRepository.java  QueryGenerator.java
catalog/src/main/java/com/mm/catalog/router/: CatalogRouter.java
catalog/src/main/java/com/mm/catalog/service/: CatalogService.java
catalog/src/main/resources/: config.yaml
catalog/src/test/java/com/mm/catalog/: TestCatalogVerticle.java
core/: BUILD.bazel  build.gradle.kts
core/src/main/java/com/mm/mongo/: MongoConfig.java
core/src/main/java/com/mm/postgres/: PostgresConfig.java  QueryGenerator.java
core/src/main/java/com/mm/properties/: ConfigProperties.java
core/src/main/java/com/mm/run/: DefaultMain.java
(+84 files in other folders)
