java_library(
    name = "runtime-deps",
    srcs = glob(["**/src/main/java/**/*.java"]),
    resources = glob(["**/src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//core:core-lib",
        "@maven_deps//:io_vertx_vertx_stack_depchain",
        "@maven_deps//:io_vertx_vertx_rx_java2",
        "@maven_deps//:com_fasterxml_jackson_core_jackson_databind",
        "@maven_deps//:io_vertx_vertx_web",
        "@maven_deps//:io_vertx_vertx_pg_client",
        "@maven_deps//:io_vertx_vertx_mongo_client",
        "@maven_deps//:io_vertx_vertx_config",
        "@maven_deps//:io_vertx_vertx_config_yaml",
    ],
)


java_binary(
    name = "service",
    main_class = "com.mm.catalog.App",
    visibility = ["//visibility:public"],
    runtime_deps = [":runtime-deps"],
)