java_library(
    name = "core-lib",
    srcs = glob(["**/src/main/java/**/*.java"]),
    resources = glob(["**/src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven_deps//:io_vertx_vertx_stack_depchain",
        "@maven_deps//:io_vertx_vertx_rx_java2",
        "@maven_deps//:io_vertx_vertx_web",
        "@maven_deps//:io_vertx_vertx_pg_client",
        "@maven_deps//:io_vertx_vertx_config",
        "@maven_deps//:io_vertx_vertx_config_yaml",
    ],
)